# speech

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MODEL_LICENSES.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  vercel.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  enrollment-privacy.yml  feature-request.yml  model-compatibility.yml  performance-regression.yml
.github/workflows/: ci.yml
apps/web/: index.html  package.json  playwright.config.ts  playwright.production.config.ts  tsconfig.json  vite.config.ts
docs/adr/: 0001-defer-browser-training-path.md  0002-v0-5-0-personal-model-semantics.md  0003-onnx-runtime-web-training-feasibility.md  0004-v0-5-0-quality-cohort-gate.md  0005-v0-5-0-reference-benchmark-gate.md  0006-v0-5-0-privacy-security-licensing-review.md  0007-v0-5-0-release-notes-and-planning-snapshot.md  0008-v0-6-0-ui-inventory-baseline.md  0009-v0-6-0-baseline-task-metrics.md  0010-v0-6-0-task-first-information-architecture.md  0011-v0-6-0-progressive-disclosure-rules.md  0012-v0-6-0-terminology-and-copy-budgets.md  0013-v0-6-0-route-map-and-legacy-redirects.md  0014-v0-6-0-component-gallery-and-usage-docs.md  0015-v0-6-0-dictate-performance-parity.md
docs/instructions/: adr-template.instructions.md  architecture.instructions.md  (+24 more)
scripts/: license-and-generated-file-check.mjs
test-data/: LICENSES.md
(+227 files in other folders)
