[project]
name = "speech-tools"
version = "0.0.0"
description = "Python tooling for the speech model, manifest, sentence-bank, and profile-trainer workflows."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "ruff>=0.12.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tools", "training"]
python_files = ["test_*.py"]
pythonpath = ["tools/model-pack", "tools/feature-reference", "tools/transcript-reference"]
